.provarCaches/00D410000011HE0EAM/objects/rstk__poloadercust__c.object
<CustomObject>
    <description>poloadercust__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <description>External Id</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>Id</formula>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__poloadercust_apiname__c</fullName>
        <label>Custom Field API Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__poloadercust_apivalue__c</fullName>
        <description>Custom Field API Value</description>
        <label>Custom Field API Value</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__poloadercust_poloader__c</fullName>
        <description>Purchase order API Object</description>
        <label>Purchase order API Object</label>
        <referenceTo>rstk__poloader__c</referenceTo>
        <relationshipLabel>Purchase Order API Object Custom Fields</relationshipLabel>
        <relationshipName>poloadercusts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__poloadercust_type__c</fullName>
        <description>Header or Line Custom Field</description>
        <label>Header or Line Custom Field</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Header</fullName>
                    <default>true</default>
                    <label>Header</label>
                </value>
                <value>
                    <fullName>Line</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <description>Trigger Options</description>
        <label>Triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Purchase Order API Object Custom Field</label>
    <listViews>
        <fullName>rstk__RS_PO_API_Object_Custom_Fields</fullName>
        <columns>NAME</columns>
        <columns>rstk__poloadercust_poloader__c</columns>
        <columns>rstk__poloadercust_apiname__c</columns>
        <columns>rstk__poloadercust_apivalue__c</columns>
        <columns>rstk__poloadercust_type__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>PO API Object Custom Fields</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Purchase Order API Object Custom Field N</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Purchase Order API Object Custom Fields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>